--- a/Lioden.css
+++ b/Lioden.css
@@ -1,3 +1,5 @@
+body {background: url("https://images6.alphacoders.com/309/309983.jpg") fixed;background-repeat: no-repeat;background-size: cover;color: #000;}
+
 .welcomeback, .white, .bottomlinks li a:hover, .bottomlinks li a {
 color: #000;
 }
